--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-	<script src="./js/task-1.js" defer></script>
-	<script src="./js/task-2.js" defer></script>
-	<script src="./js/task-3.js" defer></script>
+	<script src="./js/task-test.js" defer></script>
+
 </body>
 
 </html>
